# trinamic_control

./: CMakeLists.txt  LICENSE  package.xml  setup.py
config/: trinamic_control_config.yaml
include/: trinamic_control_node.hpp
include/trinamic_control/trinamic_config/: trinamic_config.hpp
include/trinamic_control/trinamic_connection/: trinamic_connection.hpp
include/trinamic_control/trinamic_joint/: trinamic_joint.hpp
include/trinamic_control/trinamic_message/: trinamic_command.hpp  trinamic_message.hpp  trinamic_message_command.hpp  trinamic_message_response.hpp  trinamic_response.hpp
include/trinamic_control/trinamic_parameter/: trinamic_parameter.hpp
launch/: trinamic_control_node_launch.py
src/: trinamic_control_node.cpp
src/trinamic_control/trinamic_config/: trinamic_config.cpp
src/trinamic_control/trinamic_connection/: trinamic_connection.cpp
src/trinamic_control/trinamic_joint/: trinamic_joint.cpp
src/trinamic_control/trinamic_message/: trinamic_command.cpp  trinamic_message.cpp  trinamic_message_command.cpp  trinamic_message_response.cpp  trinamic_response.cpp
src/trinamic_control/trinamic_message/implementation/: trinamic_command.cpp
src/trinamic_control/trinamic_parameter/: trinamic_parameter.cpp
test/trinamic_control/trinamic_message/: trinamic_message_command_test.cpp  trinamic_message_response_test.cpp  trinamic_message_test.cpp
test/trinamic_control/trinamic_message/implementation/: trinamic_command_test.cpp  trinamic_response_test.cpp
test/trinamic_control/trinamic_parameter/: trinamic_parameter_test.cpp
